--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HappyBirthday</string>
+    <string name="happy_birthday_message">Happy Birthday, Sam!</string>
+    <string name="from_duong">From Duong.</string>
 </resources>
